# PredRecon

./: README.md
Planner/: README.md
Planner/Code/local_tsp/: single.par  single.tsp  single.txt
Planner/Code/src/airsim_ros_pkgs/: CMakeLists.txt
Planner/Code/src/airsim_ros_pkgs/include/: airsim_ros_wrapper.h
Planner/Code/src/airsim_ros_pkgs/launch/: airsim_node.launch
Planner/Code/src/airsim_ros_pkgs/rviz/: default.rviz
Planner/Code/src/airsim_ros_pkgs/src/: airsim_ros_wrapper.cpp
Planner/Code/src/fuel_planner/active_perception/: CMakeLists.txt
Planner/Code/src/fuel_planner/active_perception/include/active_perception/: global_planner.h  graph_search.h  perception_utils.h
Planner/Code/src/fuel_planner/active_perception/src/: frontier_finder.cpp  global_planner.cpp  graph_node.cpp  model_test.cpp  surface_prediction.cpp
Planner/Code/src/fuel_planner/bspline/: CMakeLists.txt
Planner/Code/src/fuel_planner/bspline_opt/: CMakeLists.txt
Planner/Code/src/fuel_planner/exploration_manager/: CMakeLists.txt
Planner/Code/src/fuel_planner/exploration_manager/include/exploration_manager/: fast_exploration_fsm.h  pred_recon_fsm.h
Planner/Code/src/fuel_planner/exploration_manager/launch/: algorithm.xml  init_test.launch  recon.launch
Planner/Code/src/fuel_planner/exploration_manager/src/: cluster.cpp  fast_exploration_fsm.cpp  pred_recon_fsm.cpp  surface_pcd.cpp
Planner/Code/src/fuel_planner/path_searching/: CMakeLists.txt
Planner/Code/src/fuel_planner/path_searching/include/path_searching/: astar2.h
Planner/Code/src/fuel_planner/plan_env/: CMakeLists.txt
Planner/Code/src/fuel_planner/plan_env/include/plan_env/: map_ros.h
Planner/Code/src/fuel_planner/plan_env/src/: map_ros.cpp  obj_predictor.cpp
Planner/Code/src/fuel_planner/plan_manage/: CMakeLists.txt
Planner/Code/src/fuel_planner/plan_manage/config/: traj.rviz
Planner/Code/src/fuel_planner/plan_manage/include/plan_manage/: local_planner.h  plan_container.hpp  planner_manager.h
Planner/Code/src/fuel_planner/plan_manage/script/: 3D_Colmap.md  collect_traj.txt  sample_vp.py
Planner/Code/src/fuel_planner/plan_manage/src/: planner_manager.cpp  traj_server.cpp
Planner/Code/src/fuel_planner/traj_utils/: CMakeLists.txt
Planner/Code/src/fuel_planner/traj_utils/src/: planning_visualization.cpp
Planner/Code/src/fuel_planner/utils/lkh_tsp_solver/resource/: single.par  single.tsp
Planner/Code/src/predrecon/active_perception/: CMakeLists.txt
Planner/Code/src/predrecon/active_perception/include/active_perception/: graph_node.h  surface_prediction.h
Planner/Code/src/predrecon/active_perception/src/: perception_utils.cpp
Planner/Code/src/predrecon/bspline_opt/: CMakeLists.txt
Planner/Code/src/predrecon/bspline_opt/src/: bspline_optimizer.cpp
Planner/Code/src/predrecon/exploration_manager/: CMakeLists.txt
Planner/Code/src/predrecon/exploration_manager/config/: traj.rviz
Planner/Code/src/predrecon/exploration_manager/include/exploration_manager/: pred_recon_manager.h
Planner/Code/src/predrecon/exploration_manager/launch/: algorithm.xml  recon.launch  rviz.launch  simulator.xml
Planner/Code/src/predrecon/exploration_manager/src/: exploration_node.cpp  fast_exploration_manager.cpp  pred_recon_manager.cpp
Planner/Code/src/predrecon/path_searching/include/path_searching/: astar2.h
Planner/Code/src/predrecon/path_searching/src/: astar2.cpp
Planner/Code/src/predrecon/plan_env/include/plan_env/: obj_predictor.h  sdf_map.h
Planner/Code/src/predrecon/plan_env/src/: map_ros.cpp  sdf_map.cpp
Planner/Code/src/predrecon/plan_manage/: CMakeLists.txt
Planner/Code/src/predrecon/plan_manage/script/: 3D_Colmap.md  database.py  dense_cfg.py
Planner/Code/src/predrecon/plan_manage/src/: local_planner.cpp  traj_server.cpp  trajectory_generator_waypoint.cpp
Planner/Code/src/predrecon/traj_utils/: CMakeLists.txt
Planner/Code/src/predrecon/traj_utils/src/: planning_visualization.cpp
Planner/Code/src/predrecon/utils/: visual_cone.dae
Planner/Code/src/px4ctrl/: CMakeLists.txt  package.xml
Planner/Code/src/px4ctrl/config/: ctrl_param_fpv.yaml  ctrl_param_fpv.yaml.bak
Planner/Code/src/px4ctrl/launch/: ctrl_md.launch
Planner/Code/src/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  PX4CtrlParam.cpp  PX4CtrlParam.h  controller.cpp  hovthrkf.cpp  input.h  px4ctrl_node.cpp
Planner/Code/src/self_msgs_and_srvs/: CMakeLists.txt
Planner/Code/src/uav_simulator/quadrotor_msgs/: CMakeLists.txt
Planner/Code/src/uav_simulator/quadrotor_msgs/msg/: PositionCommand.msg
Planner/Code/src/visualization_utils/: CMakeLists.txt  package.xml
Planner/Code/src/visualization_utils/include/visualization_utils/: visualization_utils.h
Planner/Code/src/visualization_utils/src/: visualization_utils.cpp
Planner/Code/tsp_dir/: single.par  single.tsp  single.txt
SPM/: README.md  distillation.py  lib_predictor.py  requirements.txt  train.py
SPM/data/: README.md
SPM/dataset/: __init__.py  sest.py  shapenet.py  shapenet_pcn.py
SPM/dataset/generation/: batch_partial.py  copy_pcd.py  depth2pcd.py  fbx2obj.py  obj2pcd.py  obj_preproc.py  render_blender.py  vis_proc_cloud.py
SPM/extensions/chamfer_distance/: chamfer3D.cu  chamfer_cuda.cpp  chamfer_distance.py  setup.py
SPM/extensions/chamfer_distance/chamfer_3D.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SPM/extensions/earth_movers_distance/: emd.py  emd_kernel.cu  setup.py
SPM/extensions/earth_movers_distance/emd_cuda.egg-info/: PKG-INFO  SOURCES.txt
SPM/metrics/: loss.py  metric.py
SPM/models/: __init__.py  estimator.py  spm.py
SPM/ops/: iou3d_module.py  voxel_module.py  voxel_vis.py
SPM/visualization/: __init__.py  visualization.py
(+7 files in other folders)
